                      |_| |_| |_||_|   \___||_| |_| |_|

                               https://mfem.org


Version 4.4.1 (development)
===========================

Mesh improvements
-----------------
- New classes, SubMesh and ParSubMesh, that allow to define a subset of a parent
  Mesh. Both classes allow for the same functionality as Mesh and ParMesh and
  work with all existing interfaces like finite element spaces etc.

- Added example for body-fitted volumetric and shape integration using the 
  Algoim library.

- Added WhiteGaussianNoiseDomainLFIntegrator: a LinearFormIntegrator class for
  spatial Gaussian white noise.

- Added a new Zienkiewicz-Zhu patch recovery-based a posteriori error estimator.
  See fem/estimators.hpp.

- Added support for ParMoonolith, https://bitbucket.org/zulianp/par_moonolith,
  which provides parallel non-conforming, non-matching, variational, volumetric
  mesh information transfer. With ParMortarAssember, fields can be exchanged
  between arbitrarily distributed and unrelated finite element meshes in a
  variationally consistent way.

- Added full assembly and device support for several LinearForm integrators:
  * DomainLF: (f, v)
  * VectorDomainLF: ((f1,...,fn), (v1,...,vn))
  * DomainLFGrad: (f, grad(v))
  * VectorDomainLFGrad: ((f1x,f1y,f1z,...,fnx,fny,fnz), grad(v1,...,vn))

- Add a new example code, Example 33/33p, to demonstrate the solution of
  spectral fractional PDEs with MFEM.

- Added a Dockerfile for a simple MFEM container, see config/docker/README.md.

- Added support for assembling low-order-refined matrices using a GPU-enabled
  "batched" algorithm. The lor_solvers and plor_solvers now fully support GPU
  acceleration.

- Added Windows 2022 CI testing with GitHub actions.

- Added support for mixed meshes and pyramids in GSLIB-FindPoints.

Version 4.4, released on March 21, 2022
=======================================

Linear and nonlinear solvers
----------------------------